--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -10,6 +10,7 @@
     font: 16px/1.5  "Microsoft Yahei",
       "Hiragino Sans GB", "Heiti SC", "WenQuanYi Micro Hei", sans-serif;
     color: #333;
+  background-color: rgb(59, 45, 72);
   }
   
   /* 去除列表默认样式 */
